add some margin at sign in anchor

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p class="col-auto d-none d-lg-block text-light mb-n1 mt-3">Thu, Mar 26, 2020</p>
                 </div>
                 <div class="ml-auto order-lg-3 align-self-lg-end mb-lg-2 mr-lg-3" id="subscribe-container">
-                    <a href="#" class="font-weight-bold"> SIGN IN</a>
+                    <a href="#" class="font-weight-bold mr-2"> SIGN IN</a>
                     <a href="#" class="d-inline custom-badge p-1.5 font-weight-bold">SUBSCRIBE ></a>
                 </div>
                 <button class="col-auto order-lg-4 navbar-toggler d-lg-none" type="button" data-target="#top-navbar" data-toggle="collapse">
