added serch icon

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1"><a href="#" class="nav-link font-weight-bold">The Debate</a></li>
                         <li class="navbar-item border-right d-flex justify-content-center flex-fill pr-1 pl-1"><a href="#" class="nav-link font-weight-bold">Vantage</a></li>
                         <li class="navbar-item d-flex justify-content-center flex-fill pr-1 pl-1"><a href="#" class="nav-link font-weight-bold">Weather</a></li>
-                        <li class="navbar-item border-none d-flex justify-content-center flex-fill pl-1"><input type="text" name="search-bar" placeholder="Search" class=""></li>
+                        <li class="navbar-item border-none d-flex justify-content-center align-items-center flex-fill pl-1 position-relative"><input type="text" name="search-bar" placeholder="Search"><span class="position-absolute" id="search-icon"></span></li>
                     </ul>
                 </div>
             </div>
