added hover effect on collapse menu

--- a/index.html
+++ b/index.html
@@ -39,90 +39,90 @@
                                 <input type="text" name="search-bar" placeholder="Search">
                                 <span class="position-absolute" id="search-icon-collapse"></span>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>U.S.</span>
-                                        <span>></span>
+                                        <span class="white-hover">U.S.</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>World</span>
-                                        <span>></span>
+                                        <span class="white-hover">World</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Business</span>
-                                        <span>></span>
+                                        <span class="white-hover">Business</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Tech & Science</span>
-                                        <span>></span>
+                                        <span class="white-hover">Tech & Science</span>
+                                        <span class="orange-hover">></span>
                                     </div></a>
                                 </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Culture</span>
-                                        <span>></span>
+                                        <span class="white-hover">Culture</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Newsgeek</span>
-                                        <span>></span>
+                                        <span class="white-hover">Newsgeek</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Sports</span>
-                                        <span>></span>
+                                        <span class="white-hover">Sports</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Health</span>
-                                        <span>></span>
+                                        <span class="white-hover">Health</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>The Debate</span>
-                                        <span>></span>
+                                        <span class="white-hover">The Debate</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Vantage</span>
-                                        <span>></span>
+                                        <span class="white-hover">Vantage</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
-                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1">
+                            <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
                                 <a href="#" class="nav-link font-weight-bold text-dark w-100">
                                     <div class="d-flex justify-content-between w-100">
-                                        <span>Weather</span>
-                                        <span>></span>
+                                        <span class="white-hover">Weather</span>
+                                        <span class="orange-hover">></span>
                                     </div>
                                 </a>
                             </li>
