--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="ml-auto order-lg-3 align-self-lg-end mb-lg-2 mr-lg-3" id="subscribe-container">
                     <a href="#" class="font-weight-bold mr-2"> SIGN IN</a>
-                    <a href="#" class="d-inline custom-badge p-1.5 font-weight-bold">SUBSCRIBE ></a>
+                    <a href="#" class="d-inline custom-badge p-1.5 font-weight-bold"><span>SUBSCRIBE ></span></a>
                 </div>
                 <button class="col-auto order-lg-4 navbar-toggler d-lg-none" type="button" data-target="#top-navbar" data-toggle="collapse">
                     <i class="fas fa-bars navbar-toggler-icon"></i>
@@ -36,7 +36,7 @@
                     <div class="d-flex justify-content-end">
                         <ul class="navbar-nav collapse-menu">
                             <li class="navbar-item border-none d-flex  align-items-center flex-fill pl-1 position-relative">
-                                <input type="text" name="search-bar" placeholder="Search">
+                                <input type="text" name="search-bar" placeholder="Search" id="collapse-input">
                                 <span class="position-absolute" id="search-icon-collapse"></span>
                             </li>
                             <li class="navbar-item  d-flex  flex-fill pr-1 pl-1 collapse-hover">
